Updates to Index.html
Changed Index to Index.html, and added comments of author and dates. Updated doctype declaration.

--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <!--
@@ -7,10 +7,10 @@
     Case Problem 1
     
     Jedds Tree Care Home Page
-    Author: 
-    Date:   
+    Author: Gabriel Fuentes
+    Date: 8.21.18  
 
-    Filename: jtc_index.html
+    Filename: Index.html
    -->
 
 </head>
