--- a/jtc_services_txt.html
+++ b/jtc_services_txt.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <!--
@@ -7,8 +7,8 @@
     Case Problem 1
     
     Jacobs Tree Care Services
-    Author: 
-    Date:   
+    Author: Gabriel Fuentes
+    Date: 8.21.18
 
     Filename: jtc_services.html
 	-->
